/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'application'
}

application {
    mainClassName = 'lsifjava.Main'
}

repositories {
    mavenLocal()
    maven {
        url = 'https://repo.maven.apache.org/maven2'
    }
}

dependencies {
    compile 'com.github.javaparser:javaparser-symbol-solver-core:3.18.0'
    compile 'fr.inria.gforge.spoon:spoon-core:8.3.0-beta-10'
    compile 'com.google.code.gson:gson:2.8.6'
    compile 'commons-cli:commons-cli:1.4'
    compile 'org.slf4j:slf4j-api:1.7.30'
    compile 'org.slf4j:slf4j-nop:1.7.30'
}

group = 'com.sourcegraph'
version = '1.0-SNAPSHOT'
sourceCompatibility = '1.8'

publishing {
    model {
        tasks.generatePomFileForSourcegraphPublication {
            destination = file("$projectDir/pom.xml")
        }
    }
    publications {
        sourcegraph(MavenPublication) {
            from components.java
        }
    }
}
